[package]
name = "hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
reqwest = {version = "0.11.14", features = ["json"]}
serde_json = "1.0.94"
serde = { version = "1.0.157", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
chrono = "0.4.24"
